--- a/CookHelper/Views/SettingsPage.xaml
+++ b/CookHelper/Views/SettingsPage.xaml
@@ -22,7 +22,11 @@
     <StackLayout BackgroundColor="#FFEFE8" Spacing="0">
 
         <Grid BackgroundColor="#D18E69" Margin="0,36,0,0">
-            <Grid BackgroundColor="White" HeightRequest="68" Margin="0,0.5,0,0.5">
+            <Grid 
+                BackgroundColor="White" 
+                HeightRequest="68" 
+                Margin="0,0.5,0,0.5"
+                >
                 <Label
                     Text="Zaloguj się do swojego konta"
                     FontSize="17" 
