--- a/CookHelper/Views/AddProductPage.xaml
+++ b/CookHelper/Views/AddProductPage.xaml
@@ -92,7 +92,7 @@
                         BackgroundColor="White"
                         >
                         <Image 
-                            Source="set_weight.png" 
+                            Source="Settings/set_weight.png" 
                             Margin="16,8" 
                             HorizontalOptions="Start"
                         />
@@ -140,7 +140,7 @@
                         BackgroundColor="White"
                         >
                         <Image 
-                            Source="set_volume.png" 
+                            Source="Settings/set_volume.png" 
                             Margin="16,8" 
                             HorizontalOptions="Start"/>
                         <Label 
@@ -187,7 +187,7 @@
                         BackgroundColor="White"
                         >
                         <Image 
-                            Source="set_amount.png"
+                            Source="Settings/set_amount.png"
                             Margin="16,8" 
                             HorizontalOptions="Start"
                         />
