--- a/CookHelper/Views/ProductsPage.xaml
+++ b/CookHelper/Views/ProductsPage.xaml
@@ -5,14 +5,38 @@
     xmlns:views="clr-namespace:CookHelper.Views" 
     x:Class="CookHelper.Views.ProductsPage"
     xmlns:controls="clr-namespace:CookHelper.Controls;assembly=CookHelper"
+    xmlns:local="clr-namespace:CookHelper;assembly=CookHelper"
     >
     <NavigationPage.TitleView> 
-        <Grid BackgroundColor="#985321">
-            <Grid x:Name="searchBar" TranslationY="-44">
+        <Grid HeightRequest="44">
+            <Grid x:Name="searchBar" TranslationY="-44" HeightRequest="44">
                 <controls:CustomSearchBar 
                     x:Name="searchBox" 
-                    Margin="0,0,60,0"
-                />
+                    CancelButtonColor="Black"
+                    >
+                    
+                    <controls:CustomSearchBar.Margin>
+                        <OnPlatform x:TypeArguments="Thickness">
+                            <On Platform="iOS" Value="0,0,60,0" />
+                            <On Platform="Android" Value="-15,5,105,5" />
+                        </OnPlatform>
+                    </controls:CustomSearchBar.Margin>
+                    
+                    <controls:CustomSearchBar.BackgroundColor>
+                        <OnPlatform x:TypeArguments="Color">
+                            <On Platform="Android" Value="White" />
+                        </OnPlatform>
+                    </controls:CustomSearchBar.BackgroundColor>
+
+                    <controls:CustomSearchBar.TextColor>
+                        <OnPlatform x:TypeArguments="Color">
+                            <On Platform="iOS" Value="Black" />
+                            <On Platform="Android" Value="Black" />
+                        </OnPlatform>
+                    </controls:CustomSearchBar.TextColor>
+                    
+                </controls:CustomSearchBar>
+               
                 <Button 
                     Text="Anuluj" 
                     FontSize="17" 
@@ -20,9 +44,10 @@
                     HorizontalOptions="End" 
                     Margin="0,0,8,0" 
                     Clicked="NavBar_DefaultBar"
+                    BackgroundColor="Transparent"
                 />
             </Grid>
-            <Grid x:Name="defaultBar">
+            <Grid x:Name="defaultBar" HeightRequest="44">
                 <Label 
                     Text="Produkty" 
                     HorizontalOptions="Center" 
@@ -31,20 +56,26 @@
                     FontAttributes="Bold" 
                     TextColor="White" 
                 />
-                <Button 
-                    Image="NavigationBar/nav_search.png" 
-                    HorizontalOptions="End" 
+                <Grid
+                    HorizontalOptions="End"
                     WidthRequest="44" 
                     Margin="0,0,54,0"
-                    Clicked="NavBar_SearchBar"
-                />
-                <Button 
-                    Image="NavigationBar/nav_add.png" 
-                    HorizontalOptions="End" 
+                    >
+                    <Image Source="{controls:ImageResource CookHelper.Resources.NavBar.nav_search.png}" />
+                    <Grid.GestureRecognizers>
+                        <TapGestureRecognizer Tapped="NavBar_SearchBar" />
+                    </Grid.GestureRecognizers>
+                </Grid>
+                <Grid
+                    HorizontalOptions="End"
                     WidthRequest="44" 
                     Margin="0,0,4,0"
-                    Clicked="NavBar_AddProduct"
-                />
+                    >
+                    <Image Source="{controls:ImageResource CookHelper.Resources.NavBar.nav_add.png}" />
+                    <Grid.GestureRecognizers>
+                        <TapGestureRecognizer Tapped="NavBar_AddProduct" />
+                    </Grid.GestureRecognizers>
+                </Grid>
             </Grid>
         </Grid>
     </NavigationPage.TitleView> 
@@ -92,7 +123,7 @@
                 <Image 
                     HeightRequest="28" 
                     WidthRequest="28" 
-                    Source="TabBar/tab_products_active.png" 
+                    Source="{controls:ImageResource CookHelper.Resources.TabBar.tab_products_active.png}"
                     HorizontalOptions="Center" 
                     VerticalOptions="Start"
                     Margin="0,0,0,14"
@@ -112,7 +143,7 @@
                 <Image 
                     HeightRequest="28" 
                     WidthRequest="28" 
-                    Source="TabBar/tab_recipes.png" 
+                    Source="{controls:ImageResource CookHelper.Resources.TabBar.tab_recipes.png}" 
                     HorizontalOptions="Center" 
                     VerticalOptions="Start"
                 />
@@ -131,7 +162,7 @@
                 <Image 
                     HeightRequest="28"
                     WidthRequest="28" 
-                    Source="TabBar/tab_settings.png" 
+                    Source="{controls:ImageResource CookHelper.Resources.TabBar.tab_settings.png}" 
                     HorizontalOptions="Center" 
                     VerticalOptions="Start"
                 />
