--- a/CookHelper/Views/AddProductPage.xaml
+++ b/CookHelper/Views/AddProductPage.xaml
@@ -53,11 +53,12 @@
                         <TapGestureRecognizer Tapped="Picture_Tap" />
                     </Grid.GestureRecognizers>
                 </Grid>
-                <Editor 
+                <Editor
                     Placeholder="Nazwa produktu" 
                     Margin="82,0,0,0" 
                     MaxLength="25" 
                     VerticalOptions="Center"
+                    Text="{Binding product.Name}"
                 />
             </Grid>
         </Grid>
