--- a/CookHelper/Views/ProductDetailsPage.xaml
+++ b/CookHelper/Views/ProductDetailsPage.xaml
@@ -11,7 +11,7 @@
     </NavigationPage.TitleView> 
     <StackLayout BackgroundColor="#FFEFE8" Spacing="0">
         <Grid Margin="20,20">
-            <Label Text="{Binding Name}" FontSize="30" />
+            <Label Text="{Binding SelectedProduct.Name}" FontSize="30" />
         </Grid>
         
         <StackLayout Margin="20,20">
