--- a/CookHelper/Views/UnitsPage.xaml
+++ b/CookHelper/Views/UnitsPage.xaml
@@ -10,13 +10,56 @@
         
     </NavigationPage.TitleView> 
     <StackLayout BackgroundColor="#FFEFE8" Spacing="0">
-        <Grid Margin="20,20">
-            <Label Text="{Binding Title}" FontSize="30" />
+        <Grid Margin="20,0" HeightRequest="110">
+            <Label Text="{Binding Title}" FontSize="30" VerticalOptions="Center"/>
+            
+            <Button 
+                Text="+" 
+                TextColor="Black" 
+                FontSize="50" 
+                HorizontalOptions="End" 
+                Margin="12,0" 
+                HeightRequest="50" 
+                WidthRequest="50" 
+                BackgroundColor="Red"
+                VerticalOptions="Center"
+                Clicked="AddUnit"
+            />
+
         </Grid>
         
-        <StackLayout Margin="20,20">
+        <Grid BackgroundColor="#D18E69" Margin="0,0,0,0">
+            <Grid 
+                BackgroundColor="White" 
+                Margin="0,0.5,0,0.5"
+                >
+                <ListView 
+                    x:Name="UnitsLV"
+                    Grid.Row="0"
+                    ItemsSource="{Binding UnitsCollection}"
+                    Margin="0,3,0,0"
+                    ItemSelected="OnItemSelected"
+                    SeparatorVisibility="None"
+                    >
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <ViewCell>
+                                <Grid>      
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="4*"/>
+                                        <ColumnDefinition Width="2*"/>
+                                    </Grid.ColumnDefinitions>
+                                    <Entry Text="{Binding Name}" Margin="10,3,0,3" Grid.Column="0" Placeholder="Nazwa"/>        
+                                    <Entry Text="{Binding Value}" Margin="0,3,10,3" Grid.Column="1" />  
+                                    <Label Text="g" Grid.Column="1" HorizontalOptions="End" VerticalOptions="Center" Margin="0,0,20,0" TextColor="Gray"/>
+                                </Grid>
+                            </ViewCell>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+            </Grid>
             
-        </StackLayout>
+        </Grid>
         
 
     </StackLayout>
