--- a/CookHelper/Views/UnitsPage.xaml
+++ b/CookHelper/Views/UnitsPage.xaml
@@ -6,6 +6,14 @@
     x:Class="CookHelper.Views.UnitsPage"
     xmlns:controls="clr-namespace:CookHelper.Controls;assembly=CookHelper"
     >
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <controls:UnitBaseConverter x:Key="Converter1" />
+        </ResourceDictionary>
+    </ContentPage.Resources>
+
+    
+    
     <NavigationPage.TitleView> 
         
     </NavigationPage.TitleView> 
@@ -51,8 +59,8 @@
                                     </Grid.ColumnDefinitions>
                                     <Entry Text="{Binding Name}" Margin="10,3,0,3" Grid.Column="0" Placeholder="Nazwa"/>        
                                     <Entry Text="{Binding Value}" Margin="0,3,10,3" Grid.Column="1" />  
-                                    <Label Text="g" Grid.Column="1" HorizontalOptions="End" VerticalOptions="Center" Margin="0,0,20,0" TextColor="Gray"/>
-                                    <Button Text="❌" Grid.Column="2" Margin="-10,0,6,0" FontSize="12" Clicked="DeleteUnit"/>
+                                    <Label Text="{Binding Base ,Converter={StaticResource Converter1}}" Grid.Column="1" HorizontalOptions="End" VerticalOptions="Center" Margin="0,0,20,0" TextColor="Gray"/>
+                                    <Button CommandParameter="{Binding Id}" Text="❌" Grid.Column="2" Margin="-10,0,6,0" FontSize="12" Clicked="DeleteUnit"/>
                                        
                                 </Grid>
                             </ViewCell>
